# deadpgp

./: .gitignore  CODEOWNERS  README.md  audit.jsonl  living_identity.py  openapi_dead_pgp.yaml  pyproject.toml
.deadpgp/: qa_roles.yml
.github/workflows/: qa.yml  release-snapshot.yml
32Hybrid/: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod
32Hybrid/cmd/avdclient/: main.go
32Hybrid/cmd/controlplane/: main.go
32Hybrid/cmd/runner/: main.go
32Hybrid/docs/hv/: architecture.md  test-plan.md  vision.md
32Hybrid/hv/api/: 32hybrid_hv.proto
32Hybrid/hv/guest/: main.go
32Hybrid/internal/config/: config.go
32Hybrid/internal/controlplane/: server.go
32Hybrid/internal/discovery/: discovery.go
32Hybrid/internal/runner/: server.go  (+1 more)
core/: aes512.py  audit.py  non_binary.py  rsa4096.py  signal.py  standards.py  tough_crypto.py
deadpgp/: __init__.py  armor.py  audit.py  cli.py  crypto_box.py  crypto_pwd.py  doctor.py  encrypt.py  keys.py  policy.py  qa.py  sign.py  workflow.py
deadpgp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: HKP_COMPAT.md  SPEC.md  WHISTLEBLOWER-PROTOCOL.md  crypto-basics.md  hkp-dead-mode.md
docs/workflows/: sequenced-reveal.md
examples/gpg/: README.md  encrypt-decrypt.sh  export-import.sh  keygen.sh  revocation.sh  sign-verify.sh
examples/hkp_stub/: .gitignore  go.mod  main.go
identities/: living_identity.py
quantum/: shield.py
src/deadpgp/: __init__.py  armor.py  cli.py  encryption.py  keys.py  signing.py
tests/: test_armor.py  test_audit.py  test_crypto_strength.py  test_encrypt.py  test_encrypt_decrypt.py  test_encryption.py  test_keys.py  test_policy.py  test_qa_gate.py  test_seat_of_life.py  test_sign.py  test_signing.py  test_workflow.py
tools/: deadpgp_reveal.py
tools/openpgp_import/: import.py
tools/seat_of_life/: README.md  snapshot.py
(+8 files in other folders)
