[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deadpgp"
version = "1.0.0"
description = "A modern, beginner-friendly encryption tool inspired by PGP"
readme = "README.md"
license = { file = "LICENSE", text = "EPL-2.0" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "argon2-cffi>=23.1",
]

[project.scripts]
deadpgp = "deadpgp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deadpgp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
